 - Allow setting constant boundary conditions directly without using Constant
 - Create missing directories if specified as part of file names
 - Allow re-use of preconditioners (only PETSc for now)
 - Fixes for UMFPACK solver on some 32 machines
 - Provide access to more Hypre preconditioners via PETSc
 - Updates for SLEPc 3.1
 - Improve and implement re-use of LU factorizations for all backends
 - Fix bug in refinement of MeshFunctions
0.9.8 [2010-07-01]
 - Optimize and improve StabilityAnalysis.
 - Use own implementation of binary search in ODESolution (takes advantage of
   previous values as initial guess)
 - Improve reading ODESolution spanning multiple files
 - Dramatic speedup of progress bar (and algorithms using it)
 - Fix bug in writing meshes embedded higher dimensions to M-files
 - Zero vector in uBLASVector::resize() to fix spurious bug in Krylov solver
 - Handle named fields (u.rename()) in VTK output
 - Bug fix in computation of FacetArea for tetrahedrons
 - Add support for direct plotting of Dirichlet boundary conditions: plot(bc)
 - Updates for PETSc 3.1
 - Add relaxation parameter to NewtonSolver
 - Implement collapse of renumbered dof maps (serial and parallel)
 - Simplification of DofMapBuilder for parallel dof maps
 - Improve and simplify DofMap
 - Add Armadillo dependency for dense linear algebra
 - Remove LAPACKFoo wrappers
 - Add abstract base class GenericDofMap
 - Zero small values in VTK output to avoid VTK crashes
 - Handle MeshFunction/markers in homogenize bc
 - Make preconditioner selectable in VariationalProblem (new parameter)
 - Read/write meshes in binary format
 - Add parameter "use_ident" in DirichletBC
 - Issue error by default when solvers don't converge (parameter "error_on_convergence")
 - Add option to print matrix/vector for a VariationalProblem
 - Trilinos backend now works in parallel
 - Remove Mesh refine members functions. Use free refine(...) functions instead
 - Remove AdapativeObjects