@@ -1,3 +1,4 @@
+ - Add named MeshFunctions: VertexFunction, EdgeFunction, FaceFunction, FacetFunction, CellFunction
  - Allow setting constant boundary conditions directly without using Constant
  - Create missing directories if specified as part of file names
  - Allow re-use of preconditioners (only PETSc for now)
